fixed white space on career paths page

--- a/Career-Paths/career-paths.css
+++ b/Career-Paths/career-paths.css
@@ -12,3 +12,7 @@
         margin-bottom: 0;
     }
 }
+
+@media only screen and (min-width: 1920px) {
+
+}
