--- a/Header/header.css
+++ b/Header/header.css
@@ -318,7 +318,7 @@ header img {
 
   .header-container-cp {
     padding: 40px 90px;
-    top: -420px;
+    top: 50px;
     width: 760px;
   }
 }
